[package]
name = "rate_my_boulder"
version = "0.1.0"
edition = "2021"
authors = ["Ryan Ruckley <rruckley@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
# Sample photo from: https://www.archdaily.com/319613/3way-house-naf-architect-design/50f72d2eb3fc4b262a0003ed-3way-house-naf-architect-design-photo?next_project=no

[dependencies]
anyhow = "1.0.75"
env_logger = "0.10.0"
log = "0.4.20"
opencv = { version = "0.84", features = ["clang-runtime"]}
